--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ header.masthead .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header.masthead .intro-text {
-    padding-top: 300px;
+    /* padding-top: 300px; */
     padding-bottom: 200px;
   }
 
